# atelier-us

./: .gitignore
backend/: Cargo.toml  README.md
backend/migrations/2022-04-01-102457_create_tables/: down.sql  up.sql
backend/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  schema.rs  tests.rs
backend/src/db/: helpers.rs  mod.rs  reservations.rs  tables.rs  users.rs
backend/src/models/: mod.rs  reservation.rs  table.rs  user.rs
backend/src/routes/: mod.rs  reservations.rs  tables.rs  users.rs
frontend/: eslintrc.js  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  env.ts
frontend/src/__tests__/: components.test.jsx
frontend/src/api/: Api.ts  errors.ts  types.ts
frontend/src/api/routes/: reservations.ts  tables.ts  users.ts
frontend/src/common/: Storage.ts  auth.ts  constants.ts  reservations.ts
frontend/src/components/common/: APILoader.tsx  DayPicker.tsx  HourPicker.tsx  PeopleCount.tsx  _styles.scss  hooks.tsx
frontend/src/components/modals/: AuthModal.tsx  ConfirmationModal.tsx  LoginModal.tsx  LogoutModal.tsx  SMSConfirmationModal.tsx  SignupModal.tsx  TableModal.tsx  _styles.scss
frontend/src/components/navigation/: NavItem.tsx  NavLayout.tsx  _styles.scss
frontend/src/components/pages/: ContactPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  MyReservationsPage.tsx  ReservePage.tsx  SuccessPage.tsx  _styles.scss
frontend/src/styles/: _chakra.scss  _components.scss  _global.scss  _variables.scss  styles.scss
frontend/src/types/: index.ts  models.ts
(+6 files in other folders)
