[package]
authors = ["Dawid Rodak"]
name = "laprim"
version = "1.0.0"
edition = "2021"
license = "Unlicense OR MIT"

[dependencies]
rocket = { version = "0.4.10", default-features = false }
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.74" }
rust-crypto = "0.2.36"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
validator = { version = "0.14.0", features = ["phone"] }
validator_derive = "0.14.0"
dotenv = "0.15.0"
jsonwebtoken = "6.0.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]
